3 de julio 2022 ejercicios

--- a/2-FE/bootStrap/index.html
+++ b/2-FE/bootStrap/index.html
@@ -65,7 +65,11 @@
           </div>
         </div>
       </div>
-        <!--INICIO Carrousel-->
+        <!--INICIO Card-->
+      <div class="card">
+
+      </div>
+       <!--INICIO Carousel-->
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
